fixing alignment for skills container for smaller devices

--- a/style/about.css
+++ b/style/about.css
@@ -539,7 +539,7 @@ body {
     .coursework_tab {
         width: 25%;
         height: auto;
-        margin-left: 30%;
+        text-align: center;
         font-size: 20px;
         margin-top: 12%;
     }
